# gst_media_player

./: CMakeLists.txt  README.md  main.c
src/audioplayer/: audio_player.c  audio_player.h  audio_player2.c  audio_player2.h
src/elements/: audio_demux.c  audio_demux.h  audio_demux2.c  audio_demux2.h  media_adec.c  media_adec.h  media_audiorender.c  media_audiorender.h  media_demux.c  media_demux.h  media_h264parse.c  media_h264parse.h  media_h265parse.c  media_h265parse.h  media_parser.c  media_parser.h  media_vdec.c  media_vdec.h  media_videorender.c  media_videorender.h  my_adec.c  my_adec.h  my_audiorender.c  my_audiorender.h  my_demux.c  my_demux.h  my_h264parse.c  my_h264parse.h  my_parser.c  my_parser.h  my_vdec.c  my_vdec.h  my_videorender.c  my_videorender.h
src/mediaplayer/: media_player.c  media_player.h
src/videoplayer/: video_player.c  video_player.h
